--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -42,4 +43,5 @@
       </form>
     </div>
   </body>
+  <script src="/js/signup.js"></script>
 </html>
