--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <title>Let's Talk</title>
     <link rel="stylesheet" href="/css/chat.css" />
   </head>
   <body>
     <div class="container">
-      <!-- Sidebar for Groups and Invitations -->
+      <!-- Sidebar for Groups, Invitations, and User Search -->
       <div class="sidebar">
         <h2>Groups</h2>
         <ul id="group-list"></ul>
