added multimedia sharing

--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -39,6 +39,10 @@
         </div>
         <div class="messages-container" id="messages"></div>
         <div class="chat-input-container">
+          <!-- Hidden file input for multimedia sharing -->
+          <input type="file" id="file-input" style="display: none" />
+          <!-- Custom upload button -->
+          <button id="upload-btn" type="button">Share Multimedia</button>
           <input
             type="text"
             id="message-input"
